--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_network_image: ^3.4.1
   loading_animation_widget: ^1.3.0
   flutter_native_splash: ^2.4.6
+  connectivity_plus: ^6.1.4
 
 dev_dependencies:
   flutter_test:
