--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,21 +36,30 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   dio: ^5.8.0+1
-  go_router: ^15.1.2
+  go_router: ^15.1.3
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.5.3
-  intl: ^0.20.2
   kakao_flutter_sdk: ^1.9.7+3
   google_sign_in: ^6.3.0
   socket_io_client: ^3.1.2
   firebase_core: ^3.13.1
   firebase_messaging: ^15.2.6
   fl_chart: ^1.0.0
-  table_calendar: ^3.2.0
   cached_network_image: ^3.4.1
   loading_animation_widget: ^1.3.0
   flutter_native_splash: ^2.4.6
   connectivity_plus: ^6.1.4
+  flutter_svg: ^2.1.0
+  pretty_dio_logger: ^1.4.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  uuid: ^4.5.1
+  logger: ^2.5.0
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
+  flutter_localizations:
+    sdk: flutter
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +72,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.3
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
