--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   table_calendar: ^3.1.3
+  flutter_secure_storage: ^9.2.4
+  firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
+  firebase_storage: ^12.4.7
+  firebase_analytics: ^11.5.0
+  firebase_crashlytics: ^4.3.7
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +80,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   hive_generator: ^2.0.1
   build_runner: ^2.4.15
+  retrofit_generator: ^9.2.0
+  json_serializable: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
