feat: 애플 로그인기능

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   firebase_storage: ^12.4.7
   firebase_analytics: ^11.5.0
   firebase_crashlytics: ^4.3.7
+  # sign_in_with_apple: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,11 +78,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.3
+  flutter_launcher_icons: ^0.14.4
   hive_generator: ^2.0.1
   build_runner: ^2.4.15
   retrofit_generator: ^9.2.0
   json_serializable: ^6.9.0
+  flutter_native_splash: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -124,3 +126,19 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  assets:
+    - assets/images/app_icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+
+flutter_native_splash:
+  color: "#0099FF"
+  image: assets/images/app_icon.png
+  android: true
+  ios: true
+  android_gravity: center
+  ios_content_mode: center
