--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   firebase_analytics: ^11.5.0
   firebase_crashlytics: ^4.3.7
   # sign_in_with_apple: ^5.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -129,6 +130,7 @@ flutter:
 
   assets:
     - assets/images/app_icon.png
+    - .env
 
 flutter_launcher_icons:
   android: true
