--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dependencies:
   firebase_storage: ^12.4.7
   firebase_analytics: ^11.5.0
   firebase_crashlytics: ^4.3.7
-  # sign_in_with_apple: ^5.0.0
+  sign_in_with_apple: ^5.0.0
   flutter_dotenv: ^5.0.2
 
 dev_dependencies:
