--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1063603907093-jo0beci2d62htqn3474chdj55lp78u41.apps.googleusercontent.com</string>
+	<string>1063603907093-lis30ejh0heka8rfuk9lkoar69b803rc.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1063603907093-jo0beci2d62htqn3474chdj55lp78u41</string>
+	<string>com.googleusercontent.apps.1063603907093-lis30ejh0heka8rfuk9lkoar69b803rc</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>1063603907093-5f3t8hnqttp6ek980iufp2phu4mqsfpt.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mentalfit.app</string>
+	<string>com.mentalfit.sports</string>
 	<key>PROJECT_ID</key>
 	<string>mental-fit-78d5a</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1063603907093:ios:b469bb76e085ffb26dfc1c</string>
+	<string>1:1063603907093:ios:f4b90dcf0a9f0e866dfc1c</string>
 </dict>
 </plist>
