--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
-		<string>Flutter Mentalfit</string>
+		<string>Sports MentalFit</string>
 		<key>CFBundleExecutable</key>
 		<string>$(EXECUTABLE_NAME)</string>
 		<key>CFBundleIdentifier</key>
@@ -41,6 +41,8 @@
 			<string>UIInterfaceOrientationLandscapeLeft</string>
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
+		<key>UIViewControllerBasedStatusBarAppearance</key>
+		<false/>
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
 		<key>UIApplicationSupportsIndirectInputEvents</key>
@@ -48,8 +50,8 @@
 		<key>UIStatusBarHidden</key>
 		<false/>
 		<key>NSCameraUsageDescription</key>
-		<string>프로필 사진 촬영을 위해 카메라를 사용합니다</string>
+		<string>프로필 이미지 촬영을 위해 카메라를 사용합니다</string>
 		<key>NSPhotoLibraryUsageDescription</key>
-		<string>프로필 사진 선택을 위해 사진 라이브러리에 접근합니다</string>
+		<string>프로필 이미지 선택을 위해 사진 라이브러리에 접근합니다</string>
 	</dict>
 </plist>
