--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_mentalfit
-description: "MentalFit - 스포츠 심리 상담 전문 앱. AI 기반 상담, 전문 상담사 매칭, 자가진단을 통해 운동선수와 스포츠인들의 정신건강을 지원합니다."
+description: "Sports MentalFit - 스포츠 심리 상담 전문 앱. AI 기반 상담, 전문 상담사 매칭, 자가진단을 통해 운동선수와 스포츠인들의 정신건강을 지원합니다."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.7.2
+  sdk: '>=3.4.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,44 +30,60 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
+
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
+  firebase_storage: ^12.3.3
+  firebase_messaging: ^15.1.3
+  firebase_crashlytics: ^4.1.3
+
+  # State Management
   flutter_riverpod: ^2.6.1
-  dio: ^5.8.0+1
-  go_router: ^15.1.3
-  flutter_screenutil: ^5.9.3
-  shared_preferences: ^2.5.3
-  kakao_flutter_sdk: ^1.9.7+3
-  google_sign_in: ^6.3.0
-  socket_io_client: ^3.1.2
-  firebase_core: ^3.13.1
-  firebase_messaging: ^15.2.6
-  fl_chart: ^1.0.0
+  riverpod_annotation: ^2.3.5
+
+  # Navigation
+  go_router: ^14.6.2
+
+  # UI Components
+  flutter_svg: ^2.0.10+1
   cached_network_image: ^3.4.1
-  loading_animation_widget: ^1.3.0
-  flutter_native_splash: ^2.4.6
-  connectivity_plus: ^6.1.4
-  flutter_svg: ^2.1.0
-  pretty_dio_logger: ^1.4.0
+  image_picker: ^1.1.2
+  image_cropper: ^5.0.1
+
+  # HTTP & API
+  http: ^1.2.2
+  dio: ^5.7.0
+
+  # Local Storage
+  shared_preferences: ^2.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  uuid: ^4.5.1
-  logger: ^2.5.0
-  image_picker: ^1.0.4
-  permission_handler: ^12.0.0+1
-  table_calendar: ^3.2.0
-  flutter_secure_storage: ^9.2.4
-  firebase_auth: ^5.6.0
-  cloud_firestore: ^5.6.9
-  firebase_storage: ^12.4.7
-  firebase_analytics: ^11.5.0
-  firebase_crashlytics: ^4.3.7
-  sign_in_with_apple: ^5.0.0
-  flutter_dotenv: ^5.0.2
+
+  # Utilities
+  intl: ^0.19.0
+  url_launcher: ^6.3.1
+  permission_handler: ^11.3.1
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.2
+
+  # OpenAI
+  openai_dart: ^1.0.0
+
+  # Charts
+  fl_chart: ^0.69.0
+
+  # Calendar
+  table_calendar: ^3.0.9
+
+  # Video Call (for counseling)
+  agora_rtc_engine: ^6.3.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
@@ -78,13 +94,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^4.0.0
+  riverpod_generator: ^2.4.5
+  build_runner: ^2.4.12
   hive_generator: ^2.0.1
-  build_runner: ^2.4.15
-  retrofit_generator: ^9.2.0
-  json_serializable: ^6.9.0
-  flutter_native_splash: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -98,15 +111,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+  # https://flutter.dev/assets-and-images/#resolution-aware
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -126,21 +139,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
-
-  assets:
-    - assets/images/app_icon.png
-    - .env
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: "assets/images/app_icon.png"
-
-flutter_native_splash:
-  color: "#0099FF"
-  image: assets/images/app_icon.png
-  android: true
-  ios: true
-  android_gravity: center
-  ios_content_mode: center
+  # see https://flutter.dev/custom-fonts/#from-packages
