--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,74 +30,52 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
-  # Firebase
-  firebase_core: ^3.6.0
-  firebase_auth: ^5.3.3
-  cloud_firestore: ^5.5.0
-  firebase_storage: ^12.3.3
-  firebase_messaging: ^15.1.3
-  firebase_crashlytics: ^4.1.3
-
-  # State Management
+  flutter_localizations:
+    sdk: flutter
+  cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.3.5
-
-  # Navigation
-  go_router: ^14.6.2
-
-  # UI Components
-  flutter_svg: ^2.0.10+1
+  dio: ^5.8.0+1
+  go_router: ^15.1.3
+  flutter_screenutil: ^5.9.3
+  shared_preferences: ^2.5.3
+  kakao_flutter_sdk: ^1.9.7+3
+  google_sign_in: ^6.3.0
+  socket_io_client: ^3.1.2
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
+  fl_chart: ^1.0.0
   cached_network_image: ^3.4.1
-  image_picker: ^1.1.2
-  image_cropper: ^5.0.1
-
-  # HTTP & API
-  http: ^1.2.2
-  dio: ^5.7.0
-
-  # Local Storage
-  shared_preferences: ^2.3.2
+  loading_animation_widget: ^1.3.0
+  flutter_native_splash: ^2.4.6
+  connectivity_plus: ^6.1.4
+  flutter_svg: ^2.1.0
+  pretty_dio_logger: ^1.4.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
-  # Utilities
-  intl: ^0.19.0
-  url_launcher: ^6.3.1
-  permission_handler: ^11.3.1
-  device_info_plus: ^10.1.0
-  package_info_plus: ^8.0.2
-
-  # OpenAI
-  openai_dart: ^1.0.0
-
-  # Charts
-  fl_chart: ^0.69.0
-
-  # Calendar
-  table_calendar: ^3.0.9
-
-  # Video Call (for counseling)
-  agora_rtc_engine: ^6.3.2
-  permission_handler: ^11.3.1
+  uuid: ^4.5.1
+  logger: ^2.5.0
+  image_picker: ^1.0.4
+  permission_handler: ^12.0.0+1
+  table_calendar: ^3.2.0
+  flutter_secure_storage: ^9.2.4
+  firebase_auth: ^5.6.0
+  cloud_firestore: ^5.6.9
+  firebase_storage: ^12.4.7
+  firebase_analytics: ^11.5.0
+  firebase_crashlytics: ^4.3.7
+  sign_in_with_apple: ^5.0.0
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
-  riverpod_generator: ^2.4.5
-  build_runner: ^2.4.12
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
   hive_generator: ^2.0.1
+  build_runner: ^2.4.15
+  retrofit_generator: ^9.2.0
+  json_serializable: ^6.9.0
+  flutter_native_splash: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -112,8 +90,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
-    - assets/icons/
+    - assets/images/app_icon.png
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -140,3 +118,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
+
+flutter_native_splash:
+  color: "#0099FF"
+  image: assets/images/app_icon.png
+  android: true
+  ios: true
+  android_gravity: center
+  ios_content_mode: center
